--- a/templates/base_main.html
+++ b/templates/base_main.html
@@ -16,7 +16,7 @@
                 <li><a href="{% url 'login:index' %}" class="index_off"></a></li>
                 <li><a href="../role/role_list.html" class="role_off"></a></li>
                 <li><a href="../admin/admin_list.html" class="admin_off"></a></li>
-                <li><a href="../fee/fee_list.html" class="fee_off"></a></li>
+                <li><a href="{% url 'fee:fee_list' %}" class="fee_off"></a></li>
                 <li><a href="{% url 'account:account_list' %}" class="account_off"></a></li>
                 <li><a href="{% url 'service:service_list' %}" class="service_off"></a></li>
                 <li><a href="../bill/bill_list.html" class="bill_off"></a></li>
