--- a/templates/NETCTOSS_Demo/main/service/service_list.html
+++ b/templates/NETCTOSS_Demo/main/service/service_list.html
@@ -63,7 +63,7 @@
                         <td>{{service.account.id}}</td>
                         <td>{{service.account.idcard_no}}</td>
                         <td>{{service.account.real_name}}</td>
-                        <td>openlab1</td>
+                        <td>{{service.os_username}}</td>
                         {% if service.status == 1 %}
                              <td >开通</td>
                             {% elif service.status == 0 %}
