--- a/templates/NETCTOSS_Demo/main/account/account_add.html
+++ b/templates/NETCTOSS_Demo/main/account/account_add.html
@@ -1,53 +1,67 @@
 ﻿{% extends 'base_main.html' %}
+
 {% load static %}
-{% block content %}
+
+{% block css %}
     {{ block.super }}
+    <link rel="stylesheet" href="{% static 'NETCTOSS_Demo/main/account/css/account_add.css' %}">
+{% endblock %}
+
+{% block content %}
     <!--主要区域开始-->
     <div id="main">
         <!--保存成功或者失败的提示消息-->
         <div id="save_result_info" class="save_fail">保存失败，该身份证已经开通过账务账号！</div>
-        <form action="" method="" class="main_form">
+        <form action="" method="post" class="main_form">
             <!--必填项-->
             <div class="text_info clearfix"><span>姓名：</span></div>
             <div class="input_info">
-                <input type="text" value="张三"/>
+                <input id="check_name" type="text"/>
                 <span class="required">*</span>
-                <div class="validate_msg_long">20长度以内的汉字、字母和数字的组合</div>
+                <span class="validate_msg_long">20长度以内的汉字、字母的组合</span>
             </div>
-            <div class="text_info clearfix"><span>身份证：</span></div>
+            <span id="name_info" class="warning"></span>
+            <div class="text_info clearfix">
+                <span>身份证：</span>
+            </div>
             <div class="input_info">
-                <input type="text" value="230198765432123456"/>
+                <input type="text" id="check_identity"/>
                 <span class="required">*</span>
-                <div class="validate_msg_long">正确的身份证号码格式</div>
+                <span class="validate_msg_long">正确的身份证号码格式</span>
             </div>
+            <span id="identity_info" class="warning"></span>
             <div class="text_info clearfix"><span>登录账号：</span></div>
             <div class="input_info">
-                <input type="text" value="创建即启用，状态为开通"/>
+                <input id="check_account" type="text"/>
                 <span class="required">*</span>
-                <div class="validate_msg_long">30长度以内的字母、数字和下划线的组合</div>
+                <span class="validate_msg_long">30长度以内的字母、数字和下划线的组合</span>
             </div>
+            <span id="account_info" class="warning"></span>
             <div class="text_info clearfix"><span>密码：</span></div>
             <div class="input_info">
-                <input type="password"/>
+                <input id="check_pwd" type="password"/>
                 <span class="required">*</span>
-                <div class="validate_msg_long">30长度以内的字母、数字和下划线的组合</div>
+                <span class="validate_msg_long">6到16位的字母、数字和下划线的组合</span>
             </div>
+            <span id="pwd_info" class="warning"></span>
             <div class="text_info clearfix"><span>重复密码：</span></div>
             <div class="input_info">
-                <input type="password"/>
+                <input id="confirm_pwd" type="password"/>
                 <span class="required">*</span>
-                <div class="validate_msg_long">两次密码必须相同</div>
+                <span class="validate_msg_long">两次密码必须相同</span>
             </div>
+            <span id="cpwd_info" class="warning"></span>
             <div class="text_info clearfix"><span>电话：</span></div>
             <div class="input_info">
-                <input type="text" class="width200"/>
+                <input id="check_tel" type="text" class="width200"/>
                 <span class="required">*</span>
-                <div class="validate_msg_medium">正确的电话号码格式：手机或固话</div>
+                <span class="validate_msg_medium">正确的电话号码格式：手机或固话</span>
             </div>
+            <span id="tel_info" class="warning"></span>
             <!--可选项-->
             <div class="text_info clearfix"><span>可选项：</span></div>
             <div class="input_info">
-                <img src="../images/show.png" alt="展开" onclick="showOptionalInfo(this);"/>
+                <img src="{% static 'images/show.png' %}" alt="展开" onclick="showOptionalInfo(this);"/>
             </div>
             <div id="optionalInfo" class="hide">
                 <div class="text_info clearfix"><span>推荐人身份证号码：</span></div>
@@ -98,13 +112,35 @@
             </div>
             <!--操作按钮-->
             <div class="button_info clearfix">
-                <input type="button" value="保存" class="btn_save" onclick="showResult();"/>
-                <input type="button" value="取消" class="btn_save"/>
+                <input type="button" value="保存" class="btn_save" onclick="add_user()"/>
+                <input type="button" value="取消" class="btn_save" onclick="location.href='/account/account_list'"/>
             </div>
         </form>
     </div>
     <!--主要区域结束-->
+{% endblock %}
+
+{% block footer %}
     <div id="footer">
 
     </div>
+{% endblock %}
+
+{% block ext_js %}
+    {{ block.super }}
+    <script type="text/javascript" src="{% static 'NETCTOSS_Demo/main/account/js/md5.js' %}"></script>
+    <script type="text/javascript" src="{% static 'NETCTOSS_Demo/main/account/js/account_add.js' %}"></script>
+    <script language="javascript" type="text/javascript">
+        //显示选填的信息项
+        function showOptionalInfo(imgObj) {
+            var div = document.getElementById("optionalInfo");
+            if (div.className === "hide") {
+                div.className = "show";
+                imgObj.src = "{% static 'images/hide.png' %}";
+            } else {
+                div.className = "hide";
+                imgObj.src = "{% static 'images/show.png' %}";
+            }
+        }
+    </script>
 {% endblock %}
